Added tailwind and flowbite

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,4 +1,6 @@
 /* Write your global styles here, in PostCSS syntax */
+@tailwind base;
+/* Write your global styles here, in PostCSS syntax */
 /* ! tailwindcss v3.3.0 | MIT License | https://tailwindcss.com */
 /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
@@ -602,3 +604,5 @@ select {
 	--tw-backdrop-saturate: ;
 	--tw-backdrop-sepia: ;
 }
+@tailwind components;
+@tailwind utilities
